Fix saved parms to fit into 16 again, muahaha

--- a/default.cfg
+++ b/default.cfg
@@ -4,7 +4,7 @@ bind "ESCAPE" "togglemenu"
 bind "SPACE" "+jump"
 bind "+" "sizeup"
 bind "," "+moveleft"
-bind "-" "sizedown"
+bind "_" "sizedown"
 bind "." "+moveright"
 bind "/" "impulse 10"
 bind "0" "impulse 77"
@@ -17,6 +17,7 @@ bind "6" "impulse 6"
 bind "7" "impulse 7"
 bind "8" "impulse 8"
 bind "9" "impulse 90"
+bind "-" "impulse 79"
 bind "=" "sizeup"
 bind "[" "r_fullbright 1"
 bind "]" "r_fullbright 0"
