Fix some stuff and mess around with the rally cars again.

--- a/default.cfg
+++ b/default.cfg
@@ -27,8 +27,8 @@ bind "b" "impulse 143"
 bind "c" "+movedown"
 bind "d" "+moveright"
 bind "e" "impulse 159"
-bind "f" "+forward"
-bind "g" "impulse 146"
+bind "f" "impulse 146"
+bind "g" "impulse 55"
 bind "h" "impulse 56"
 bind "j" "impulse 57"
 bind "k" "impulse 58"
