--- a/default.cfg
+++ b/default.cfg
@@ -17,7 +17,6 @@ bind "6" "impulse 6"
 bind "7" "impulse 7"
 bind "8" "impulse 8"
 bind "9" "impulse 90"
-bind "-" "impulse 79"
 bind "=" "sizeup"
 bind "[" "r_fullbright 1"
 bind "]" "r_fullbright 0"
@@ -34,6 +33,7 @@ bind "j" "impulse 57"
 bind "k" "impulse 58"
 bind "l" "impulse 59"
 bind "n" "impulse 144"
+bind "i" "impulse 175"
 bind "s" "+back"
 bind "t" "messagemode"
 bind "v" "+moveup"
