Fix ai searching, fix precaches that were missing on a few monsters, fix proximity grenade not blowing up when touching enemies, fix invisibility check calling some things invisible due to alpha being 0

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
 gfx/env/*
 config.cfg
-a0.sav
+*.sav
 fte.cfg
+ironwail.cfg
 keepsrc/fteqcc.ini
 ssqccore.txt
+history.txt
 progs.lno
 a1.sav
 a2.sav
@@ -11,10 +13,40 @@ quick.sav
 maps/*.bsp
 maps/*.lit
 maps/*.map
+maps/*.pts
+maps/*.prt
 !maps/asset_library.bsp
 !maps/asset_library.lit
 !maps/b_*.bsp
 !maps/statuegarden.bsp
+!maps/statuegarden.lit
+!maps/test*.bsp
+!maps/test*.lit
+mapsrc/*.map
+mapsrc/*.bsp
+mapsrc/*.lit
+mapsrc/*.rmf
+mapsrc/*.jmf
+mapsrc/*.vmf
+mapsrc/*.prt
+mapsrc/*.texinfo
+mapsrc/*.png
+mapsrc/*.jpg
+mapsrc/*.jpeg
+mapsrc/*.pts
+mapsrc/autosave/*
+!mapsrc/ad_brk/*
+!mapsrc/base_brk/*
+!mapsrc/bmodels/*
+!mapsrc/medieval_brk/*
+!mapsrc/mjolnir/*
+!mapsrc/rtex_brk/*
+!mapsrc/speedbz_brk/*
+!mapsrc/asset_library.map
+!mapsrc/test*
+!mapsrc/template*
+!mapsrc/statuegarden.map
+!mapsrc/statuegarden.jmf
 screenshots/*.png
 config.cfg
 fte.cfg
