Attempt to use a language recognized by global language.yml

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,7 @@
 # Auto detect text files and perform LF normalization
 * text=auto
-*.qc linguist-language=QuakeC
-*.csqc linguist-language=QuakeC
-*.src linguist-language=QuakeC
-*.rc linguist-language=QConsole
-*.lst linguist-language=QConsole
+*.qc linguist-language=Quake
+*.csqc linguist-language=Quake
+*.src linguist-language=Quake
+*.rc linguist-language=Quake
+*.lst linguist-language=Quake
