--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ maps/*.lit
 maps/*.map
 maps/*.pts
 maps/*.prt
+maps/*.log
 !maps/asset_library.bsp
 !maps/asset_library.lit
 !maps/b_*.bsp
@@ -53,3 +54,5 @@ fte.cfg
 ftenq.cfg
 ironwail.cfg
 *.db
+music/*.ogg
+music/*.mp3
