Many more fixups and cleanups prior to Mjolnir 1.0

--- a/default.cfg
+++ b/default.cfg
@@ -75,29 +75,19 @@ cl_backspeed "400.000000"
 cl_forwardspeed "400.000000"
 cl_maxpitch "90"
 cl_minpitch "-90"
-cl_voip_autogain "0"
-cl_voip_bitrate "3000"
-cl_voip_capturingvol "0.5"
-cl_voip_codec ""
-cl_voip_ducking "0.5"
-cl_voip_micamp "2"
-cl_voip_noisefilter "1"
-cl_voip_play "1"
-cl_voip_showmeter "1"
 contrast "1"
 crosshair "0"
 external_ents "1"
 fov_adapt "1"
 gamma "0.95"
-gl_flashblend "0"
 gl_fullbrights "1"
-gl_load24bit "1"
 gl_overbright "1"
 gl_overbright_models "1"
 gl_subdivide_size "128"
 gl_texture_anisotropy "1"
 gl_texturemode "GL_NEAREST"
 gl_triplebuffer "1"
+gl_farclip "163840"
 host_maxfps "72"
 joy_deadzone "0.175"
 joy_deadzone_trigger "0.2"
