Update compile_csqc.yml to run for branches

--- a/.github/workflows/compile_csqc.yml
+++ b/.github/workflows/compile_csqc.yml
@@ -2,8 +2,7 @@ name: Compile csprogs.dat
 on:
   workflow_dispatch:
   push:
-    branches:
-      - master
+  pull_request:
 jobs:
   build:
     name: Compile csprogs.dat
